--- a/Roolipeli/src/main/java/juuri/ui/Kayttoliittyma.form
+++ b/Roolipeli/src/main/java/juuri/ui/Kayttoliittyma.form
@@ -438,6 +438,9 @@
                   <Dimension value="[87, 23]"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="HahmoLiikkuuYlosButtonActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="HahmoLiikkuuAlasButton">
               <Properties>
